--- a/style.css
+++ b/style.css
@@ -2,22 +2,43 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-} .nav-list {
+    border: 1px solid black;
+/* } .main-nav {
     margin: top 20px, right 30px, bottom 20px, left 40px;
     padding: 30px;
     color: #FFFFFF;
     font-family:'Courier New', Courier, monospace;
     font-size: 20px;
-    background-color: chocolate;
-} body {
-    background-color: antiquewhite;
-} header {
+    background-color: chocolate; */
+} .site-nav {
+    list-style: none;
+    /* margin-right: 30px; */
+    display: flex;
+    /* font-size: 20px; */
+} .site-nav li {
+    display: flex;
+    font-size: 20px;
+    margin-right: 30px;
+} .header {
     font-size: 50px;
-}.profile-picture {
-    width:300px;
-    border-radius: 50px;
-    margin: 10px;
-} header {
+    background-color: red;
     font-family: 'Courier New', Courier, monospace;
     color: #4169E1;
+    padding: 10px 20px;
+} .profile-picture {
+    width: 100%;
+    border-radius: 50px;
+    padding-top: 0px;
+    margin-left: 10px;
+    display: flex;
+    background-size: cover;
+/* } .container {
+    display: flex; */
+} .home-content {
+    width: 100%;
+    display: flex;
+    padding-top: 20px;
+} .bio {
+    padding-left: 20px;
+    padding-right: 20px;
 }
