--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     font-size: 20px;
     margin-right: 30px;
 } .header {
-    font-size: 50px;
+    font-size: 30px;
     background-color: red;
     font-family: 'Courier New', Courier, monospace;
     color: #4169E1;
@@ -32,6 +32,7 @@
     margin-left: 10px;
     display: flex;
     background-size: cover;
+    max-width: 400px;
 /* } .container {
     display: flex; */
 } .home-content {
@@ -41,4 +42,20 @@
 } .bio {
     padding-left: 20px;
     padding-right: 20px;
-}
+    width: 100%;
+} .store-image {
+    width: 100%;
+    padding-top: 0px;
+    margin-left: 10px;
+    display: flex;
+    background-size: cover;
+    max-width: 400px;
+
+} .tea-image {
+    width: 100%;
+    padding-top: 0px;
+    margin-left: 10px;
+    display: flex;
+    background-size: cover;
+    max-width: 400px;
+/* } @media screen and (min-width 800px) {} */
