trying to get the resume page to work properly. adjust CSS classes

--- a/style.css
+++ b/style.css
@@ -43,14 +43,7 @@
     padding-left: 20px;
     padding-right: 20px;
     width: 100%;
-} .store-image {
-    width: 100%;
-    padding-top: 0px;
-    padding-left: 20px;
-    display: flex;
-    background-size: cover;
-    max-width: 500px;
-} .tea-image {
+} .project-images {
     width: 100%;
     padding-top: 0px;
     padding-left: 20px;
@@ -70,5 +63,16 @@
     margin-bottom: 20px;
     color: #4169E1;
     font-family: 'Courier New', Courier, monospace;
+} .resume-info {
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 100%;
+    display: flex;
+    padding-top: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    color: #4169E1;
+    font-family: 'Courier New', Courier, monospace;
+
 }
 /* } @media screen and (min-width 800px) {} */
