--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
     color: #4169E1;
     font-family: 'Courier New', Courier, monospace;
 } .resume-info {
-    padding-left: 20px;
+    /* padding-left: 20px;
     padding-right: 20px;
     width: 100%;
     display: flex;
@@ -72,7 +72,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     color: #4169E1;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Courier New', Courier, monospace; */
 
 }
 /* } @media screen and (min-width 800px) {} */
