--- a/style.css
+++ b/style.css
@@ -64,15 +64,15 @@
     color: #4169E1;
     font-family: 'Courier New', Courier, monospace;
 } .resume-info {
-    /* padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 20px;
     width: 100%;
     display: flex;
-    padding-top: 20px;
+    padding: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
     color: #4169E1;
-    font-family: 'Courier New', Courier, monospace; */
-
+    font-family: 'Courier New', Courier, monospace; 
+    font-size: 20px;
+    flex-direction: column;
 }
 /* } @media screen and (min-width 800px) {} */
