--- a/style.css
+++ b/style.css
@@ -3,13 +3,6 @@
     margin: 0;
     padding: 0;
     border: 1px solid black;
-/* } .main-nav {
-    margin: top 20px, right 30px, bottom 20px, left 40px;
-    padding: 30px;
-    color: #FFFFFF;
-    font-family:'Courier New', Courier, monospace;
-    font-size: 20px;
-    background-color: chocolate; */
 } .site-nav {
     list-style: none;
     /* margin-right: 30px; */
@@ -74,5 +67,19 @@
     font-family: 'Courier New', Courier, monospace; 
     font-size: 20px;
     flex-direction: column;
+} .resume-title {
+    font-size: 30px;
+    margin-bottom: 20px;
+} .contact-info {
+    margin: 20px 0;
+} .add-bottom-margin {
+    margin: 20px 0;
 }
 /* } @media screen and (min-width 800px) {} */
+/* } .main-nav {
+    margin: top 20px, right 30px, bottom 20px, left 40px;
+    padding: 30px;
+    color: #FFFFFF;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 20px;
+    background-color: chocolate; */
